--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">FinalProject</string>
+    <string name="app_name">মুহাসাবা</string>
+
+    <string name="text_size">"25sp"</string>
 </resources>
